[gd_scene load_steps=4 format=3 uid="uid://bycbmw7m5gr1o"]

[ext_resource type="Script" path="res://scenes/world_locations/garage/garage_tile/tile.gd" id="1_81nm7"]
[ext_resource type="MeshLibrary" uid="uid://0wy5sqo7rv5j" path="res://scenes/world_locations/garage/garage_tile/floor_tiles_mesh_library.tres" id="2_ancpp"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_f3ry7"]
points = PackedVector3Array(-10, 0, -10, -10, 0, 10, 10, 0, -10, 10, 0, 10)

[node name="Tile" type="StaticBody3D" groups=["Tile"]]
script = ExtResource("1_81nm7")

[node name="Rays" type="Node3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 10, 0, 10)

[node name="RayCast3DDown" type="RayCast3D" parent="Rays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 1)
target_position = Vector3(0, 0.05, 0.01)
hit_from_inside = true

[node name="RayCast3DUp" type="RayCast3D" parent="Rays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, -1)
target_position = Vector3(0, 0.05, -0.01)
hit_from_inside = true

[node name="RayCast3DLeft" type="RayCast3D" parent="Rays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.05, 0)
target_position = Vector3(-0.01, 0.05, 0)
hit_from_inside = true

[node name="RayCast3DRight" type="RayCast3D" parent="Rays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.05, 0)
target_position = Vector3(0.01, 0.05, 0)
hit_from_inside = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_ancpp")
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 0, 0, 1, 1, 0, 2, 2, 0, 5, 5, 0, 6, 6, 0, 7, 7, 0, 8, 8, 0, 9, 9, 0, 9, 7, 0, 9, 5, 0, 9, 1, 0, 8, 0, 0, 6, 0, 0, 4, 0, 0, 2, 0, 0, 0, 2, 0, 0, 4, 0, 0, 6, 0, 0, 8, 0, 1, 9, 0, 3, 9, 0, 5, 9, 0, 7, 9, 0, 6, 8, 0, 4, 8, 0, 2, 8, 0, 1, 7, 0, 1, 5, 0, 5, 1, 0, 7, 1, 0, 8, 2, 0, 5, 3, 0, 7, 3, 0, 6, 4, 0, 8, 4, 0, 7, 5, 0, 8, 6, 0, 5, 7, 0, 3, 7, 0, 2, 6, 0, 4, 6, 0, 3, 5, 0, 2, 4, 0, 0, 1, 0, 1, 0, 0, 2, 1, 0, 3, 0, 0, 5, 0, 0, 6, 1, 0, 7, 0, 0, 8, 1, 0, 9, 0, 0, 9, 2, 0, 6, 3, 0, 3, 2, 0, 2, 3, 0, 0, 3, 0, 1, 4, 0, 0, 5, 0, 1, 6, 0, 0, 7, 0, 1, 8, 0, 0, 9, 0, 2, 9, 0, 3, 8, 0, 2, 7, 0, 2, 5, 0, 3, 6, 0, 3, 4, 0, 4, 5, 0, 4, 7, 0, 4, 9, 0, 5, 8, 0, 5, 6, 0, 5, 4, 0, 7, 4, 0, 9, 4, 0, 9, 6, 0, 9, 8, 0, 8, 9, 0, 6, 9, 0, 6, 7, 0, 6, 5, 0, 8, 5, 0, 8, 7, 0, 7, 8, 0, 7, 6, 0, 3, 3, 0, 4, 3, 0, 4, 4, 0, 1, 2, 0, 1, 3, 0, 3, 1, 0, 4, 1, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 3, 0, 9, 3, 0)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)
shape = SubResource("ConvexPolygonShape3D_f3ry7")
